--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -180,20 +180,29 @@ footer, header, hgroup, menu, nav, section {
 	border: none;
 	padding: 0.5rem;
 	}
-	.gallery-image {
-	width: 100%;
-	max-width: 300px;
-	height: auto;
-	margin: 10px;
-	object-fit: cover;
-	display: block;
-	/* border: 1px solid red; */
-	background-color: rgba(0, 0, 0, 0.1); /* Add a background color to check for invisible images */
-	}
-
-	#image-gallery {
-	overflow: auto;
-	}
+	#image-gallery-wrapper {
+		display: grid;
+		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+		grid-gap: 15px;
+		padding: 15px;
+		overflow: auto;
+		max-height: 80vh;
+	  }
+	  
+	  .gallery-image {
+		width: 100%;
+		height: auto;
+		object-fit: cover;
+		border-radius: 5px;
+		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+		transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+	  }
+	  
+	  .gallery-image:hover {
+		box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+		cursor: pointer;
+	  }
+	  
 	/* End of added by Jon*/
 
 body {
