pointer-events: none (on threejs container)

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -35,6 +35,7 @@ footer, header, hgroup, menu, nav, section {
 	background-color: transparent;
 	position: relative;
 	z-index: 0;
+	pointer-events: none;
 	}
 	.container {
 	padding: 1.5em 0;
