--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -77,13 +77,21 @@ footer, header, hgroup, menu, nav, section {
 	word-break: break-word;
 	}
 	.widget {
-	background-color: #777777;
-	border-radius: 5px;
-	padding: 1rem;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	margin-bottom: 1.5rem;
-	text-align: center;
-	}
+		background-color: #777777;
+		background-image: linear-gradient(135deg, #777777 0%, #444444 100%);
+		border-radius: 5px;
+		padding: 1rem;
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+		margin-bottom: 1.5rem;
+		text-align: center;
+		transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+	  }
+	  
+	  .widget:hover {
+		transform: translateY(-5px);
+		box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+	  }
+	  
 	#city-name,
 	#joke-title {
 	margin-bottom: 0.5rem;
